--- a/client/Makefile
+++ b/client/Makefile
@@ -1,6 +1,6 @@
 CFLAGS:= -std=c11 -pedantic -lpthread -pedantic-errors -g -Wall -Werror -Wextra -Wno-unused-parameter -Wno-unused-function -Wno-discarded-qualifiers -Wno-unused-const-variable -D_POSIX_C_SOURCE=200112L
 CLIENT_CLI:= client
-CLIENT_OBJS:= lib/args.o lib/selector.o lib/utils.o lib/connectionManager.o lib/display.o lib/fileMap.o lib/fileManager.o client.o
+CLIENT_OBJS:= lib/args.o lib/selector.o lib/utils.o lib/connectionManager.o lib/user.o lib/fileMap.o lib/fileManager.o client.o
 
 .PHONY: all clean
 
@@ -14,7 +14,7 @@ selector.o: include/selector.h
 
 connectionManager.o: include/connectionManager.h
 
-display.o: include/display.h
+user.o: include/user.h
 
 fileMap.o: include/fileMap.h
 
