added sanitize=address flag

--- a/tracker/Makefile
+++ b/tracker/Makefile
@@ -1,4 +1,4 @@
-CFLAGS:= -std=c11 -pedantic -lpthread -pedantic-errors -g -Wall -Werror -Wextra -Wno-unused-parameter -Wno-unused-function -Wno-discarded-qualifiers -Wno-unused-const-variable -D_POSIX_C_SOURCE=200112L
+CFLAGS:= -std=c11 -pedantic -lpthread -fsanitize=address -pedantic-errors -g -Wall -Werror -Wextra -Wno-unused-parameter -Wno-unused-function -Wno-discarded-qualifiers -Wno-unused-const-variable -D_POSIX_C_SOURCE=200112L
 TRACKER_CLI:= tracker
 TRACKER_OBJS:= lib/args.o lib/selector.o lib/utils.o tracker.o
 
@@ -16,4 +16,4 @@ $(TRACKER_CLI): $(TRACKER_OBJS)
 	$(CC) $(CFLAGS) $(TRACKER_OBJS) -o $(TRACKER_CLI)
 
 clean:
-	- rm -rf $(TRACKER_CLI) $(TRACKER_OBJS) 
+	- rm -rf $(TRACKER_CLI) $(TRACKER_OBJS)
