changed fileMap implementation to fileList

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,6 +1,6 @@
 CFLAGS:= -std=c11 -pedantic -lpthread -fsanitize=address -pedantic-errors -g -Wall -Werror -Wextra -Wno-unused-parameter -Wno-unused-function -Wno-discarded-qualifiers -Wno-unused-const-variable -D_POSIX_C_SOURCE=200112L
 CLIENT_CLI:= client
-CLIENT_OBJS:= lib/args.o lib/selector.o lib/utils.o lib/connectionManager.o lib/user.o lib/fileMap.o lib/fileManager.o client.o
+CLIENT_OBJS:= lib/args.o lib/selector.o lib/utils.o lib/connectionManager.o lib/user.o lib/fileList.o lib/fileManager.o client.o
 
 .PHONY: all clean
 
@@ -16,7 +16,7 @@ connectionManager.o: include/connectionManager.h
 
 user.o: include/user.h
 
-fileMap.o: include/fileMap.h
+fileList.o: include/fileList.h
 
 fileManager.o: include/fileManager.h
 
